Fix spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,7 +51,7 @@ h3 {
   font-size: 1.7rem;
   font-weight: bold;
   color: #399bd1;
-  padding: 0;
+  padding: .5rem 0;
 }
 
 h5 {
